--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -48,7 +48,7 @@
                      <children>
                         <VBox alignment="TOP_CENTER" prefHeight="351.0" prefWidth="354.0">
                            <children>
-                              <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="325.0" text="Current Jobs" />
+                              <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="325.0" text="Express Jobs" />
                               <ListView fx:id="currentJobsListView" editable="true" onMouseClicked="#handleMouseClick" prefHeight="350.0" prefWidth="347.0">
                                  <contextMenu>
                                     <ContextMenu>
@@ -64,7 +64,7 @@
                         </VBox>
                         <VBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" prefHeight="351.0" prefWidth="354.0">
                            <children>
-                              <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="325.0" text="Current Jobs" />
+                              <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="325.0" text="Regular Jobs" />
                               <ListView fx:id="currentJobsListView1" editable="true" onMouseClicked="#handleMouseClick" prefHeight="350.0" prefWidth="347.0">
                                  <contextMenu>
                                     <ContextMenu>
@@ -80,7 +80,7 @@
                         </VBox>
                         <VBox alignment="TOP_CENTER" layoutX="364.0" layoutY="10.0" prefHeight="351.0" prefWidth="354.0">
                            <children>
-                              <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="325.0" text="Current Jobs" />
+                              <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="325.0" text="Slow Jobs" />
                               <ListView fx:id="currentJobsListView11" editable="true" onMouseClicked="#handleMouseClick" prefHeight="350.0" prefWidth="347.0">
                                  <contextMenu>
                                     <ContextMenu>
