--- a/src/view/LoginView.fxml
+++ b/src/view/LoginView.fxml
@@ -10,9 +10,10 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" stylesheets="@../stylesheets/maincss.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="700.0" prefWidth="800.0" stylesheets="@../stylesheets/loginCSS.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="adminButton" alignment="CENTER" contentDisplay="CENTER" layoutX="83.0" layoutY="84.0" mnemonicParsing="false" onAction="#switchAdminView" prefHeight="232.0" prefWidth="191.0" text="Admin" textAlignment="CENTER" />
-      <Button fx:id="techButton" contentDisplay="CENTER" layoutX="340.0" layoutY="84.0" mnemonicParsing="false" onAction="#techSelect" prefHeight="232.0" prefWidth="191.0" text="Technician" />
+      <Button fx:id="adminButton" alignment="CENTER" contentDisplay="CENTER" layoutX="137.0" layoutY="266.0" mnemonicParsing="false" onAction="#switchAdminView" prefHeight="232.0" prefWidth="230.0" text="Admin" textAlignment="CENTER" />
+      <Button fx:id="techButton" contentDisplay="CENTER" layoutX="433.0" layoutY="266.0" mnemonicParsing="false" onAction="#techSelect" prefHeight="232.0" prefWidth="230.0" text="Technician" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="260.0" layoutY="100.0" prefHeight="129.0" prefWidth="282.0" text="Job Tracker" textAlignment="CENTER" />
    </children>
 </Pane>
