--- a/src/view/AdminView.fxml
+++ b/src/view/AdminView.fxml
@@ -18,42 +18,45 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="598.0" spacing="10.0">
+            <Label text="Admin Main " textFill="#e13535">
+               <font>
+                  <Font size="32.0" />
+               </font>
+               <HBox.margin>
+                  <Insets top="30.0" />
+               </HBox.margin>
+            </Label>
+            <HBox alignment="CENTER" prefHeight="500.0" prefWidth="1000.0" spacing="50.0">
                <children>
-                  <Label text="Admin Main " textFill="#e13535">
-                     <font>
-                        <Font size="32.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets top="30.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="351.0" prefWidth="600.0">
-               <children>
-                  <VBox alignment="TOP_RIGHT" prefHeight="351.0" prefWidth="215.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="351.0" prefWidth="215.0" spacing="10.0">
                      <children>
-                        <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Jobs" />
-                        <ListView fx:id="jobsListView" editable="true" prefHeight="165.0" prefWidth="215.0" />
-                        <TextArea prefHeight="165.0" prefWidth="200.0" />
+                        <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Assigned Jobs" />
+                        <ListView fx:id="assignedJobsListView" editable="true" prefHeight="220.0" prefWidth="215.0" />
+                        <Label text="Unassigned Jobs" />
+                        <ListView fx:id="unassignedJobsListView" prefHeight="200.0" prefWidth="200.0" />
                      </children>
                   </VBox>
-                  <VBox alignment="TOP_RIGHT" prefHeight="351.0" prefWidth="215.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="351.0" prefWidth="215.0" spacing="20.0">
                      <children>
                         <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="200.0" text="Inventory" />
                         <ListView fx:id="inventoryListView" editable="true" prefHeight="330.0" prefWidth="200.0" />
                      </children>
+                     <HBox.margin>
+                        <Insets top="30.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox prefHeight="350.0" prefWidth="200.0">
+                  <VBox prefHeight="350.0" prefWidth="200.0" spacing="20.0">
                      <children>
                         <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="200.0" text="Clients" />
                         <ListView fx:id="clientListView" editable="true" prefHeight="330.0" prefWidth="200.0" />
                      </children>
+                     <HBox.margin>
+                        <Insets top="30.0" />
+                     </HBox.margin>
                   </VBox>
                </children>
             </HBox>
@@ -79,7 +82,7 @@
                   </VBox>
                </children>
                <VBox.margin>
-                  <Insets bottom="10.0" top="10.0" />
+                  <Insets bottom="10.0" />
                </VBox.margin>
             </HBox>
          </children>
