--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
@@ -16,11 +10,10 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="881.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="983.0" prefWidth="1146.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox>
          <children>
@@ -98,20 +91,20 @@
                   </HBox>
                </children>
             </VBox>
-            <HBox alignment="CENTER" prefHeight="183.0" prefWidth="1040.0">
+            <HBox alignment="CENTER" prefHeight="262.0" prefWidth="1146.0">
                <children>
-                  <VBox alignment="CENTER" prefHeight="140.0" prefWidth="908.0">
+                  <VBox alignment="CENTER" prefHeight="231.0" prefWidth="908.0">
                      <children>
                         <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="21.0" prefWidth="583.0" text="Details:" />
-                        <TextArea fx:id="detailsTextArea" prefHeight="296.0" prefWidth="543.0" />
+                        <TextArea fx:id="detailsTextArea" prefHeight="276.0" prefWidth="908.0" />
                         <TextField fx:id="editField" prefHeight="33.0" prefWidth="543.0" promptText="Details: " />
                      </children>
                   </VBox>
                </children>
             </HBox>
-            <VBox alignment="CENTER" prefHeight="299.0" prefWidth="1040.0">
+            <VBox alignment="CENTER" prefHeight="299.0" prefWidth="358.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="218.0" prefWidth="1040.0" spacing="10.0" BorderPane.alignment="CENTER">
+                  <HBox alignment="CENTER" prefHeight="268.0" prefWidth="1146.0" spacing="10.0" BorderPane.alignment="CENTER">
                      <children>
                         <HBox>
                            <children>
@@ -122,12 +115,12 @@
                               </VBox>
                               <VBox alignment="CENTER">
                                  <children>
-                                    <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="34.0" prefWidth="160.0" text="Available Jobs">
+                                    <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="160.0" text="Available Jobs">
                                        <font>
                                           <Font size="16.0" />
                                        </font>
                                     </Label>
-                                    <ListView fx:id="availableJobsListView" onMouseClicked="#handleMouseClick2" prefHeight="218.0" prefWidth="389.0">
+                                    <ListView fx:id="availableJobsListView" onMouseClicked="#handleMouseClick2" prefHeight="233.0" prefWidth="389.0">
                                        <contextMenu>
                                           <ContextMenu>
                                             <items>
@@ -142,12 +135,12 @@
                         </HBox>
                         <VBox>
                            <children>
-                              <Label alignment="TOP_CENTER" prefHeight="21.0" prefWidth="334.0" text="Completed Jobs">
+                              <Label alignment="CENTER" prefHeight="79.0" prefWidth="334.0" text="Completed Jobs">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                               </Label>
-                              <ListView fx:id="completedJobsListView" onMouseClicked="#handleMouseClick3" prefHeight="218.0" prefWidth="334.0">
+                              <ListView fx:id="completedJobsListView" onMouseClicked="#handleMouseClick3" prefHeight="272.0" prefWidth="334.0">
                                  <contextMenu>
                                     <ContextMenu>
                                       <items>
@@ -156,6 +149,12 @@
                                     </ContextMenu>
                                  </contextMenu>
                               </ListView>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="218.0" prefWidth="220.0">
+                           <children>
+                              <Label alignment="CENTER" prefHeight="75.0" prefWidth="220.0" text="Extras:" />
+                              <TextArea fx:id="extrasTextArea" prefHeight="267.0" prefWidth="220.0" />
                            </children>
                         </VBox>
                      </children>
