--- a/src/view/AdminView.fxml
+++ b/src/view/AdminView.fxml
@@ -30,15 +30,15 @@
             </Label>
             <HBox alignment="CENTER" prefHeight="490.0" prefWidth="1000.0" spacing="50.0">
                <children>
-                  <VBox alignment="TOP_CENTER" prefHeight="490.0" prefWidth="485.0" spacing="10.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="490.0" prefWidth="300.0" spacing="10.0">
                      <children>
                         <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Assigned Jobs" />
-                        <ListView fx:id="assignedJobsListView" editable="true" prefHeight="220.0" prefWidth="330.0" />
+                        <ListView fx:id="assignedJobsListView" editable="true" prefHeight="220.0" prefWidth="250.0" />
                         <Label text="Unassigned Jobs" />
                         <ListView fx:id="unassignedJobsListView" prefHeight="200.0" prefWidth="200.0" />
                      </children>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="631.0" prefWidth="466.0" spacing="10.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="631.0" prefWidth="300.0" spacing="10.0">
                      <children>
                         <Label alignment="TOP_CENTER" prefHeight="32.0" prefWidth="200.0" text="Inventory" />
                         <ListView fx:id="inventoryListView" editable="true" prefHeight="330.0" prefWidth="466.0" />
@@ -92,4 +92,23 @@
    <padding>
       <Insets left="20.0" right="20.0" />
    </padding>
+   <left>
+      <VBox alignment="TOP_CENTER" prefHeight="490.0" prefWidth="201.0" spacing="20.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" prefHeight="19.0" prefWidth="226.0" text="Technicians" />
+            <ListView fx:id="technicianListView" prefHeight="335.0" prefWidth="201.0" />
+            <MenuButton fx:id="memoMenuButton" alignment="BOTTOM_CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="210.0" text="Memo recipient(s)">
+               <items>
+                  <CheckMenuItem fx:id="sendAllCheckMenuItem" mnemonicParsing="false" text="Send memo to ALL" />
+               </items>
+            </MenuButton>
+            <TextArea fx:id="memoTextArea" prefHeight="200.0" prefWidth="200.0" />
+            <Button mnemonicParsing="false" onAction="#sendMemo" text="Send Memo" />
+            <Label fx:id="sentLabel" alignment="CENTER" prefHeight="33.0" prefWidth="95.0" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="50.0" left="20.0" top="50.0" />
+         </BorderPane.margin>
+      </VBox>
+   </left>
 </BorderPane>
