--- a/src/view/AdminView.fxml
+++ b/src/view/AdminView.fxml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="807.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="916.0" prefWidth="1186.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
@@ -30,15 +27,15 @@
             </Label>
             <HBox alignment="CENTER" prefHeight="490.0" prefWidth="1000.0" spacing="50.0">
                <children>
-                  <VBox alignment="TOP_CENTER" prefHeight="490.0" prefWidth="300.0" spacing="10.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="490.0" prefWidth="459.0" spacing="10.0">
                      <children>
                         <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="248.0" text="Assigned Jobs" />
-                        <ListView fx:id="assignedJobsListView" editable="true" prefHeight="220.0" prefWidth="250.0" />
+                        <ListView fx:id="assignedJobsListView" editable="true" prefHeight="219.0" prefWidth="382.0" />
                         <Label text="Unassigned Jobs" />
                         <ListView fx:id="unassignedJobsListView" prefHeight="200.0" prefWidth="200.0" />
                      </children>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefHeight="631.0" prefWidth="300.0" spacing="10.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="490.0" prefWidth="431.0" spacing="10.0">
                      <children>
                         <Label alignment="TOP_CENTER" prefHeight="32.0" prefWidth="200.0" text="Inventory" />
                         <ListView fx:id="inventoryListView" editable="true" prefHeight="330.0" prefWidth="466.0" />
