--- a/src/view/TechMainView.fxml
+++ b/src/view/TechMainView.fxml
@@ -102,8 +102,8 @@
                   </VBox>
                   <VBox prefHeight="309.0" prefWidth="350.0">
                      <children>
-                        <Label text="Extras" />
-                        <TextArea fx:id="extrasTextArea" prefHeight="289.0" prefWidth="350.0" />
+                        <Label alignment="CENTER" prefHeight="21.0" prefWidth="387.0" text="Extras" />
+                        <TextArea fx:id="extrasTextArea" prefHeight="312.0" prefWidth="350.0" />
                      </children>
                   </VBox>
                </children>
@@ -114,10 +114,10 @@
                      <children>
                         <HBox>
                            <children>
-                              <VBox alignment="CENTER">
+                              <VBox alignment="CENTER" spacing="40.0">
                                  <children>
                                     <Button fx:id="newJob" mnemonicParsing="false" onAction="#handleNewJob" prefHeight="59.0" prefWidth="103.0" text="New Job" />
-                                    <Button fx:id="filterButton" mnemonicParsing="false" onAction="#filterAction" text="Filter" />
+                                    <Button fx:id="filterButton" mnemonicParsing="false" onAction="#filterAction" prefHeight="48.0" prefWidth="105.0" text="Filter" />
                                  </children>
                                  <HBox.margin>
                                     <Insets left="50.0" right="50.0" />
