--- a/src/view/AdminView.fxml
+++ b/src/view/AdminView.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
@@ -13,19 +19,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="916.0" prefWidth="1186.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="915.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <VBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="775.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Welcome Admin" textFill="#e13535">
-               <font>
-                  <Font size="32.0" />
-               </font>
-               <HBox.margin>
-                  <Insets top="30.0" />
-               </HBox.margin>
-            </Label>
-            <HBox alignment="CENTER" prefHeight="490.0" prefWidth="1000.0" spacing="50.0">
+            <HBox alignment="CENTER" prefHeight="500.0" prefWidth="1000.0" spacing="50.0">
                <children>
                   <VBox alignment="TOP_CENTER" prefHeight="490.0" prefWidth="459.0" spacing="10.0">
                      <children>
@@ -74,12 +72,24 @@
                </VBox.margin>
             </HBox>
          </children>
+         <BorderPane.margin>
+            <Insets top="50.0" />
+         </BorderPane.margin>
       </VBox>
    </center>
    <top>
       <Group BorderPane.alignment="TOP_RIGHT">
          <children>
-            <Button mnemonicParsing="false" onAction="#handleHomePressed" text="Home" BorderPane.alignment="CENTER" />
+            <HBox spacing="350.0">
+               <children>
+                  <Label prefHeight="65.0" prefWidth="289.0" text="Welcome Admin" textFill="#e13535">
+                     <font>
+                        <Font size="32.0" />
+                     </font>
+                  </Label>
+                  <Button mnemonicParsing="false" onAction="#handleHomePressed" text="Home" />
+               </children>
+            </HBox>
          </children>
          <BorderPane.margin>
             <Insets right="10.0" top="10.0" />
@@ -90,7 +100,7 @@
       <Insets left="20.0" right="20.0" />
    </padding>
    <left>
-      <VBox alignment="TOP_CENTER" prefHeight="490.0" prefWidth="201.0" spacing="20.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="775.0" prefWidth="201.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
             <Label alignment="CENTER" prefHeight="19.0" prefWidth="226.0" text="Technicians" />
             <ListView fx:id="technicianListView" prefHeight="335.0" prefWidth="201.0" />
@@ -104,7 +114,7 @@
             <Label fx:id="sentLabel" alignment="CENTER" prefHeight="33.0" prefWidth="95.0" />
          </children>
          <BorderPane.margin>
-            <Insets bottom="50.0" left="20.0" top="50.0" />
+            <Insets bottom="50.0" left="20.0" right="10.0" top="40.0" />
          </BorderPane.margin>
       </VBox>
    </left>
